--- a/lifesmart/manifest.json
+++ b/lifesmart/manifest.json
@@ -1,12 +1,11 @@
 {
   "domain": "lifesmart",
-  "name": "haas-lifesmart",
+  "name": "lifesmart-haas",
   "documentation": "https://github.com/MapleEve/hass-lifesmart",
   "requirements": [],
   "dependencies": [],
   "codeowners": [
-    "@skyzhishui",
     "@MapleEve"
   ],
-  "version": "24.04.02"
+  "version": "24.04.10"
 }
